--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </head>
 <body>
     <header>
-        <h1 class="nombre-principal">Javier Andrés Meléndez Ordóñez</h1>
+        <h1 class="nombre-principal">Javier Andrés Meléndez&nbsp;Ordóñez</h1>
         <nav>
             <ul class="menu-navegacion">
                 <li><a href="#inicio">Inicio</a></li>
