--- a/index.html
+++ b/index.html
@@ -159,6 +159,15 @@
         }
     </style>
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W2MG9E5JMQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W2MG9E5JMQ');
+</script>
 <body>
     <header>
         <h1 class="nombre-principal">Javier Andrés Meléndez&nbsp;Ordóñez</h1>
