--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
             <ul style="text-align: left; max-width: 800px; margin: 0 auto; font-size: 1.1rem; color: #444; line-height: 1.8; list-style: none; padding-left: 0;">
           
               <li style="margin-bottom: 1.5rem;">
+            <strong>Creativity, Ethics, and Regulation in the Age of Generative AI (Versión del autor)</strong><br>
+            <em>IGI Global</em>, 2024.
+            <br><a href="pubs/IGI Global JAMO Edit.pdf" target="_blank">Ver publicación</a>
+              </li>
+                
+                <li style="margin-bottom: 1.5rem;">
             <strong>Creativity, Ethics, and Regulation in the Age of Generative AI</strong><br>
             <em>IGI Global</em>, 2024.
             <br><a href="pubs/2024_igi_global.pdf" target="_blank">Ver publicación</a>
